--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ i.fas.fa-minus-circle.text-danger:hover {
     position: relative;
     margin-top: 50px;
 }
-@media only screen and (min-height: 530px) {
+@media only screen and (max-height: 530px) {
   #sign-in-cont {
     height: 530px;
   }
