--- a/style.css
+++ b/style.css
@@ -601,6 +601,7 @@ input[type=number] {
     top: 5px;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    box-shadow: 0px 0px 10px 3px #252525;
 }
 #close-settings:hover {
     color: var(--txt);
