--- a/style.css
+++ b/style.css
@@ -87,8 +87,10 @@ i.fas.fa-minus-circle.text-danger:hover {
     max-width: 340px !important;
     color: var(--bg);
     background-color: var(--current-color);
-    display: none;
     /*opacity: 0;*/
+}
+.hidden{
+  display: none !important;
 }
 .bottom-column {
     display: inline-block;
