--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ i.fas.fa-minus-circle.text-danger:hover {
   width: 175px;
   overflow: hidden;
   height: 22px;
+  height: 0px;
   padding-left: 5px;
 }
 .subject{
