--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ i.fas.fa-minus-circle.text-danger:hover {
   position: absolute;
   bottom: -7px;
   right:-7px;
-  background: white;
+  background: var(--bg);
   border-radius: 50%;
   padding: 1px;
   transition: 0.2s linear;
